[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/Battlefield.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/EnemySpawner.tscn" type="PackedScene" id=5]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 0, 800 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer"]
position = Vector2( 201.296, 401.182 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 182.168, 761.707 )
speed = 200

[node name="EnemySpawner" parent="." instance=ExtResource( 5 )]

[node name="KillCount" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Killed: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerupDuration" type="Label" parent="."]
margin_left = 257.024
margin_top = 2.51984
margin_right = 385.024
margin_bottom = 16.5198
text = "Powerup duration: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="."]
margin_left = 1.48651
margin_top = 13.7502
margin_right = 41.4865
margin_bottom = 27.7502
text = "Lives: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 5.0
margin_right = 402.0
margin_bottom = 803.0
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="powerup_changed" from="Player" to="." method="_on_Player_powerup_changed"]
[connection signal="wave_fired" from="Player" to="." method="_on_Player_wave_fired"]
[connection signal="spawn_enemy" from="EnemySpawner" to="." method="_on_EnemySpawner_spawn_enemy"]
